force-app/main/default/objects/Payment_Plan__c/fields/Day_Check__c.field-meta.xml
<CustomField>
    <fullName>Day_Check__c</fullName>
    <formula>DAY(TODAY()) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Check</label>
    <type>Checkbox</type>
</CustomField>