force-app/main/default/objects/Payment_Plan__c/fields/Payment_No__c.field-meta.xml
<CustomField>
    <fullName>Payment_No__c</fullName>
    <displayFormat>P-{00000}</displayFormat>
    <label>Payment No</label>
    <type>AutoNumber</type>
</CustomField>