force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Summary__c</fullName>
    <label>Payment Plan Summary</label>
    <type>TextArea</type>
</CustomField>