force-app/main/default/objects/Payment_Plan__c/fields/Student_Details__c.field-meta.xml
<CustomField>
    <fullName>Student_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Details</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>